# uuais

./: .env.example  .firebaserc  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  MEMORY.md  README.md  cors.json  eslint.config.mjs  i18n.ts  instructions.md  jest.config.ts  jest.integration.config.ts  jest.setup.ts  middleware.ts  next.config.ts  opencode.json  package-lock.json  package.json  postcss.config.mjs  proxy.ts  tailwindcss-config.js  tsconfig.json
app/: error.tsx  globals.css  layout.tsx  metadata.ts  not-found.tsx  page.tsx  providers.tsx  sitemap.ts
components/: AboutSection.tsx  AdminEvents.tsx  EventsSection.tsx  FloatingSymbolsCanvas.tsx  FoundersSection.tsx  HeroAnimation.tsx  HeroSection.tsx  HomePage.tsx  LanguageToggle.tsx  Navbar.tsx  ThemeToggle.tsx
contexts/: AppContext.tsx  CookieConsentContext.tsx
course_scraper/: README.md  create_vector_index.sh  pyproject.toml  scraper_pipeline.py  test_vector_search.py
docs/: data-fetching-and-state.md
functions/: index.js  package-lock.json  package.json
hooks/: use-mobile.ts  useAdmin.ts
i18n/: client.ts  settings.ts
instructions/: instructions.md
lib/: .firebaserc  auth-config.ts  courses.ts  email.ts  firebase-admin.ts  firebase-client.ts  firebase.json  firebase.ts  firestore.rules  firestore.ts  storage.rules
pages/: AboutPage.tsx  BlogPage.tsx  ContactPage.tsx  EventsPage.tsx  HomePage.tsx  JoinPage.tsx
providers/: LanguageProvider.tsx  ThemeProvider.tsx
public/: robots.txt  site.webmanifest
tools/: removeAdminClaim.ts  setAdminClaim.ts  setSuperAdminClaim.ts
(+263 files in other folders)
